--- a/launchers/wasm/Cargo.toml
+++ b/launchers/wasm/Cargo.toml
@@ -31,6 +31,7 @@ bevy = { version = "0.12", default-features = false, features = [
     "wav",
     "webgl2",
     "bevy_gizmos",
+    "default_font",
 ] }
 integral = { path = "../.." }
 yew = { version = "0.20", features = ["csr"] }
