--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,6 @@
 name = "integral"
 version = "0.1.0"
 edition = "2021"
-license = "MIT OR Apache-2.0"
 
 [workspace]
 resolver = "2"
@@ -61,7 +60,10 @@ bevy = { version = "0.12", default-features = false, features = [
 
 [features]
 default = []
-inspect = []
+inspect = [
+    "bevy-inspector-egui",
+    "bevy_panorbit_camera/bevy_egui",
+]
 
 [target.'cfg(not(target_family = "wasm"))'.features]
 inspect = [
@@ -70,8 +72,8 @@ inspect = [
 
 [dependencies]
 bevy.workspace = true
-bevy-inspector-egui = "0.21.0"
-bevy_panorbit_camera = { version = "0.9.0", features = ["bevy_egui"] }
+bevy-inspector-egui = { version = "0.21.0", optional = true }
+bevy_panorbit_camera = { version = "0.9.0" }
 # bevy_touch_camera = "0.1.1"
 bevy_touch_camera = { version = "0.1.1", path = "bevy_touch_camera" }
 fastrand = "2.0.1"
