--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,9 @@ inspect = [
     "bevy-inspector-egui",
     "bevy_panorbit_camera/bevy_egui",
 ]
+embedded = [
+    "bevy_embedded_assets",
+]
 
 [target.'cfg(not(target_family = "wasm"))'.features]
 inspect = [
@@ -73,6 +76,7 @@ inspect = [
 [dependencies]
 bevy.workspace = true
 bevy-inspector-egui = { version = "0.21.0", optional = true }
+bevy_embedded_assets = { version = "0.9.1", optional = true }
 bevy_panorbit_camera = { version = "0.9.0" }
 # bevy_touch_camera = "0.1.1"
 bevy_touch_camera = { version = "0.1.1", path = "bevy_touch_camera" }
