--- a/launchers/native/Cargo.toml
+++ b/launchers/native/Cargo.toml
@@ -7,6 +7,7 @@ workspace = "../.."
 [features]
 default = []
 inspect = ["integral/inspect"]
+embedded = ["integral/embedded"]
 
 [dependencies]
 bevy.workspace = true
