--- a/.github/workflows/deploy-page.yaml
+++ b/.github/workflows/deploy-page.yaml
@@ -35,11 +35,9 @@ jobs:
       - name: optimize Wasm
         uses: NiklasEi/wasm-opt-action@v2
         with:
-          file: dist/*.wasm
-        working-directory: ./launchers/wasm
+          file: ./launchers/wasm/dist/*.wasm
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4.2.5
         with:
           branch: gh-pages
-          folder: dist
-        working-directory: ./launchers/wasm
+          folder: ./launchers/wasm/dist
