--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,9 +34,6 @@ jobs:
     needs: get-version
     env:
       VERSION: ${{needs.get-version.outputs.version}}
-    defaults:
-      run:
-        working-directory: ./launchers/native
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -47,6 +44,7 @@ jobs:
       - name: Install Dependencies
         run: sudo apt-get update; sudo apt-get install pkg-config libx11-dev libasound2-dev libudev-dev
       - name: Build release
+        working-directory: ./launchers/native
         run: |
           cargo build --release --features embedded
       - name: Prepare release
@@ -58,7 +56,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ./launchers/native/${{ env.GAME_EXECUTABLE_NAME }}_linux
+          file: ${{ env.GAME_EXECUTABLE_NAME }}_linux
           asset_name: ${{ env.GAME_EXECUTABLE_NAME }}_${{ env.VERSION }}_linux
           release_name: ${{ env.VERSION }}
           tag: ${{ env.VERSION }}
@@ -69,9 +67,6 @@ jobs:
     needs: get-version
     env:
       VERSION: ${{needs.get-version.outputs.version}}
-    defaults:
-      run:
-        working-directory: ./launchers/native
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -80,6 +75,7 @@ jobs:
         with:
           toolchain: stable
       - name: Build release
+        working-directory: ./launchers/native
         run: |
           cargo build --release --features embedded
       - name: Prepare release
@@ -89,7 +85,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ./launchers/native/${{ env.GAME_EXECUTABLE_NAME }}_windows.exe
+          file: ${{ env.GAME_EXECUTABLE_NAME }}_windows.exe
           asset_name: ${{ env.GAME_EXECUTABLE_NAME }}_${{ env.VERSION }}_windows.exe
           tag: ${{ github.ref }}
           overwrite: true
